# iotjs_template

./: .gitignore  CMakeLists.txt  README.md  arm.sh  build.sh  csky.sh  main.c  main.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
cmake/: source.cmake  third_party.cmake
scripts/: c.sh  js.sh
src/: main.c  tsconfig.json
src/modules/: example.c  module.c  module.h
src/modules/js/: example.h  example.ts
src/modules/x/: x.h
